fixed overflow-x during the animations

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -23,6 +23,10 @@
   font-family: "Clicker Script", cursive;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 svg.logo path#suitfly,
 svg.logo path#diamond {
   fill: var(--q-primary) !important;
